examples/semantics/errors/error13.grace
fun error13 () : nothing
	fun foo(): nothing
		fun bar():nothing
		{
			puti(9);
		}
	{
		puti(8);
	}
{
	bar();
}
